[package]
name = "hring-tls"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
# hring = { git = "https://github.com/hapsoc/hring", rev = "5c2a5af" }
hring = { path = "../hring" }
ktls = "1.0.1"
rcgen = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
rustls = { version = "0.20.7", features = ["secret_extraction"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-rustls = "0.23.4"
http = "0.2.8"

[profile.dev.package."*"]
opt-level = 2
